<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium">

        <!-- Course Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_name"
            style="@style/TextLabel" />

        <EditText
            android:id="@+id/editText_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_name_hint"
            android:inputType="text"
            style="@style/EditTextStyle" />

        <!-- Grade -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade"
            style="@style/TextLabel" />

        <EditText
            android:id="@+id/editText_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/grade_hint"
            android:inputType="number"
            style="@style/EditTextStyle" />

        <!-- Course Date -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_date"
            style="@style/TextLabel" />

        <EditText
            android:id="@+id/editText_course_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_date"
            android:focusable="false"
            android:clickable="true"
            style="@style/EditTextStyle" />

        <!-- Save Button -->
        <Button
            android:id="@+id/button_save_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="@style/ButtonPrimary" />

        <!-- Cancel Button -->
        <Button
            android:id="@+id/button_cancel_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/ButtonSecondary" />

    </LinearLayout>

</ScrollView>




