<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium">

        <!-- Student Photo -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_photo"
            style="@style/TextLabel" />

        <ImageView
            android:id="@+id/imageView_photo"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_medium"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:scaleType="centerCrop"
            android:contentDescription="@string/student_photo" />

        <Button
            android:id="@+id/button_select_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/select_photo"
            style="@style/ButtonSecondary" />

        <!-- Student Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            style="@style/TextLabel" />

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_name_hint"
            android:inputType="textPersonName"
            style="@style/EditTextStyle" />

        <!-- Student ID -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_id"
            style="@style/TextLabel" />

        <EditText
            android:id="@+id/editText_student_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_id_hint"
            android:inputType="text"
            style="@style/EditTextStyle" />

        <!-- Enrollment Date -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enrollment_date"
            style="@style/TextLabel" />

        <EditText
            android:id="@+id/editText_enrollment_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_date"
            android:focusable="false"
            android:clickable="true"
            style="@style/EditTextStyle" />

        <!-- Department Dropdown -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department"
            style="@style/TextLabel" />

        <Spinner
            android:id="@+id/spinner_department"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:padding="@dimen/padding_medium" />

        <!-- Active Checkbox -->
        <CheckBox
            android:id="@+id/checkbox_is_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/is_active"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/text_primary" />

        <!-- Save Button -->
        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="@style/ButtonPrimary" />

        <!-- Cancel Button -->
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/ButtonSecondary" />

    </LinearLayout>

</ScrollView>
